--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,8 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+#intellij files
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
