--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,4 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 #intellij files
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
+.idea/*.xml
